--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 	    <td colspan="2"><center><img src="images/flag-austria.png" class="flag"><img src="images/flag-uk.png" class="flag"><img src="images/flag-croatia.png" class="flag"></center></td>
 	</tr>
 	<tr>
-	  <td colspan="2"><p>Hunde und Katzen Friseur: Ihr Partner in der Tierpflege,<br>Zu unserem Team geh&#0246;rt eine Tier&#0228;rztin</p>
+	  <td colspan="2"><center><p>Hunde und Katzen Friseur: Ihr Partner in der Tierpflege,<br>Zu unserem Team geh&#0246;rt eine Tier&#0228;rztin</p></center>
 	</tr>
 	</table>
     
@@ -67,7 +67,7 @@
 		  <ul id="features">
 		    <li><img src="images/green-tick.png" class="greeting-bullet-tick"><p>Kostenloser Parkplatz</p></li>
 			<li><img src="images/green-tick.png" class="greeting-bullet-tick"><p>Neue kunden und junge Hunden</p></li>
-			<li><img src="images/green-tick.png" class="greeting-bullet-tick"><p>Sie k&#0246;nnen beiHaustier bleiben</p></li>
+			<li><img src="images/green-tick.png" class="greeting-bullet-tick"><p>Sie k&#0246;nnen bei Haustier bleiben</p></li>
 			<li><img src="images/green-tick.png" class="greeting-bullet-tick"><p>Ein Park in der N&#0228;he</p></li>
 			<li><img src="images/green-tick.png" class="greeting-bullet-tick"><p>Kurtzfristige Termine</p></li>
 			<li><img src="images/green-tick.png" class="greeting-bullet-tick"><p>Qualifiziertes Personal</p></li>
