--- a/wichtig.html
+++ b/wichtig.html
@@ -54,56 +54,61 @@
   
   <div id="content">
   
-      <h1>Tipps f&#0252;r einen angenehmen Besuch im Tiersalon</h1>
+      <h2>Tipps f&#0252;r einen angenehmen Besuch im Tiersalon</h2>
 	  
 	  	<h2>Dieser kurze Leitfaden soll Ihnen helfen, Ihrem Haustier einen stressfreien Besuch bei uns zu erm&#0246;glichen und das bestm&#0246;gliche Ergebnis zu erzielen.</h2>
 		
    <div id="wissenswertes">
 	
-	<center><img src="images/tartufar.jpg"></center>
+	<img src="galerie/tartufar2.jpg">
 	
-	  <p>Bei den Terminen m&#0246;chten wir den bestm&#0246;glichen 
+	<ul>
+	  <li><p>Bei den Terminen m&#0246;chten wir den bestm&#0246;glichen 
 	  Aufenthalt f&#0252;r Ihr Tier 
 	  gew&#0228;hrleisten. Nehmen Sie sich die Zeit, den Aufenthalt Ihres Tieres so 
-	  stressfrei wie m&#0246;glich zu gestalten.</p>
-	  <hr>
-	  <p>Gemeinsam sorgen wir f&#0252;r das 
+	  stressfrei wie m&#0246;glich zu gestalten.</p></li>
+	  <li><p>Gemeinsam sorgen wir f&#0252;r das 
 	  Wohlbefinden und ein gepflegtes Erscheinungsbild, damit Gesundheit und 
 	  Hygiene optimal unterst&#0252;tzt werden. Unsere Arbeiten sind nicht f&#0252;r 
-	  Ausstellungen oder Wettbewerbe vorgesehen.</p>	
-	  
+	  Ausstellungen oder Wettbewerbe vorgesehen.</p></li>
+	</ul>
+	  	
   </div>
   
   	<div id="wissenswertes">
 	
-		<center><img src="images/cocker.png"=></center>
-
-	  <p>Falls Ihr Tier Gesundheits- oder Verhaltensprobleme hat, teilen Sie uns 
-	  dies bitte bereits bei der Terminbuchung mit.</p>
-	  <hr>
-	  <p>Der erste Termin k&#0246;nnte verk&#0252;rzt oder nicht 
+		<img src="images/cocker.png">
+		
+		<ul>
+		  <li><p>Falls Ihr Tier Gesundheits- oder Verhaltensprobleme hat, teilen Sie uns 
+	  dies bitte bereits bei der Terminbuchung mit.</p></li>
+	  <li><p>Der erste Termin k&#0246;nnte verk&#0252;rzt oder nicht 
 	  vollst&#0228;ndig durchgef&#0252;hrt werden, falls dieses unter 
-	  Stress oder &#0196;ngsten leidet.</p>
-	  <hr>
-	  <p>Bitte vermeiden Sie es, Ihr Tier unmittelbar 
+	  Stress oder &#0196;ngsten leidet.</p></li>
+	  <li><p>Bitte vermeiden Sie es, Ihr Tier unmittelbar 
 	  vor der Ankunft zu f&#0252;ttern, damit es w&#0228;hrend der Behandlung 
-	  keinen Durst versp&#0252;rt.</p>
+	  keinen Durst versp&#0252;rt.</p></li>
+		</ul>
 	  
 	</div>
 	
 	 <div id="wissenswertes">
 	  
-	  	<center><img src="images/husky.png" class="wichtig-img"></center>
-
-	    <p>Bitte erscheinen Sie p&#0252;nktlich zum Termin - kommen Sie jedoch 
-		nicht zu fr&#0252;h.</p>
-		<hr>
-		<p>Bei Versp&#0228;tung bitten wir Sie, uns telefonisch zu informieren. 
+	  	<img src="images/husky.png">
+		
+		<ul>
+		  <li><p>Bitte erscheinen Sie p&#0252;nktlich zum Termin - kommen Sie jedoch 
+		nicht zu fr&#0252;h.</p></li>
+		<li><p>Bei Versp&#0228;tung bitten wir Sie, uns telefonisch zu informieren. 
 		Abh&#0228;ngig von der Dauer der Versp&#0228;tung kann es sein, dass der 
-		Komplettservice nicht mehr durchgef&#0252;hrt werden kann.</p>
-		<hr>
-		<p>Falls Sie Ihren Termin nicht wahrnehmen k&#0246;nnen, geben Sie uns 
-		bitte zuverl&#0228;ssig und rechtzeitig per SMS oder Anruf Bescheid.</p>
+		Komplettservice nicht mehr durchgef&#0252;hrt werden kann.</p></li>
+		<li><p>Falls Sie Ihren Termin nicht wahrnehmen k&#0246;nnen, geben Sie uns 
+		bitte zuverl&#0228;ssig und rechtzeitig per SMS oder Anruf Bescheid.</p></li>
+		</ul>
+
+	    
+		
+		
 		
      </div>
 
