--- a/index.html
+++ b/index.html
@@ -77,9 +77,9 @@
 	  <tr>
 	    <td colspan="2" align="center"><p>Ihr Hundefriseur und Katzenfriseur, der jedes 
 		Haustier versteht. Unser salon bietet 
-		Schneiden, Bürsten, Unterwolle entfernung, Baden, Krallen und Pfotenpflege 
-		für Hunde, sowie Katzentrockenbäder, bürsten, Knoten entwirrung und 
-		Floh-Entfernung für Katzen, und viele weitere Services.</p></td>
+		Schneiden, B&#0252;rsten, Unterwolle entfernung, Baden, Krallen und Pfotenpflege 
+		f&#0252;r Hunde, sowie Katzentrockenbäder, b&#0252;rsten, Knoten entwirrung und 
+		Floh-Entfernung f&#0252;r Katzen, und viele weitere Services.</p></td>
 	  </tr>
 	</table>
 	
