--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 		    <button><a href="fotogalerie.html">Unsere fotogalerie</a></button>
 			</center>
 		  </td>
-		  <td style="width:60%"><img src="images/salon.jpg" width="600" height="auto"></td>
+		  <td style="width:60%"><img src="images/salon.png" width="600" height="auto"></td>
 		</tr>
 	  </table>
 	
