--- a/index.html
+++ b/index.html
@@ -90,12 +90,12 @@
 		  <td style="width:40%">
 		    <center>
 			<p><b>Die Kleinen Pfoten</b><br>Linzer Stra&#0223;e 57<br>4600 Wels</p><br>
-		    <button><a href="service.html">Unsere Services</a></button>
-			<button><a href="https://www.google.com/maps/place/Hundesalon+Die+Kleinen+Pfoten/@48.1627763,14.032698,17z/data=!3m1!4b1!4m6!3m5!1s0x4773f32a065a0963:0x411684e3a942975!8m2!3d48.1627763!4d14.032698!16s%2Fg%2F11w_tcdyph?authuser=0&entry=ttu&g_ep=EgoyMDI1MDQwOS4wIKXMDSoASAFQAw%3D%3D" target="_blank">Auf der Karte anzeigen</a></button>
-		    <button><a href="fotogalerie.html">Unsere fotogalerie</a></button>
+		    <button><img src="services/scheren.png" class="camera"><a href="service.html">Unsere Services</a></button>
+			<button><img src="artwork/maps-pin.png" class="maps-pin"><a href="https://www.google.com/maps/place/Hundesalon+Die+Kleinen+Pfoten/@48.1627763,14.032698,17z/data=!3m1!4b1!4m6!3m5!1s0x4773f32a065a0963:0x411684e3a942975!8m2!3d48.1627763!4d14.032698!16s%2Fg%2F11w_tcdyph?authuser=0&entry=ttu&g_ep=EgoyMDI1MDQwOS4wIKXMDSoASAFQAw%3D%3D" target="_blank">Auf der Karte anzeigen</a></button>
+		    <button><img src="artwork/camera.png" class="camera"><a href="fotogalerie.html">Unsere fotogalerie</a></button>
 			</center>
 		  </td>
-		  <td style="width:60%"><img src="images/salon.png" width="600" height="auto"></td>
+		  <td style="max-width:60%"><img src="images/salon.png" class="lokal-img"></td>
 		</tr>
 	  </table>
 	
